<resources>
    <string name="app_name">Simple 360 Video Settings</string>
    <string name="please_choose_a_file">Please choose a file.</string>
    <string name="video_type">Video type</string>
    <string name="mono">Mono</string>
    <string name="horizontal_stereo">Horizontal Stereo</string>
    <string name="vertical_stereo">Vertical Stereo</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="user_control_enabled">User control enabled</string>
    <string name="cannot_retrieve_media_info">Cannot retrieve media info.</string>
</resources>
