<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/filepath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_choose_a_file" />

    <Button
        android:id="@+id/btn_choose_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_file" />

    <TextView
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/video_type" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_mono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mono" />

        <RadioButton
            android:id="@+id/radio_horizontal_stereo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horizontal_stereo" />

        <RadioButton
            android:id="@+id/radio_vertical_stereo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertical_stereo" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch_user_control_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_control_enabled" />

</LinearLayout>
